Fix search container size on mobile

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -190,6 +190,7 @@ input[type=text][readonly] {
   @media (max-width: @screen-phone) {
     right: 50px;
     width: auto;
+    min-width: initial;
   }
 }
 
